[package]
name = "led-strip-rs"
version = "0.1.0"
authors = ["Merry Mou <moumerry@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rtfm = { version = "0.4.2" }
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.2"
maple-mini = {git = "https://github.com/evq/maple-mini-rs"}
panic-semihosting = "0.5.1"
rgb = "0.8"
smart-leds-trait = "0.1.1"
stm32f103xx-usb = {git = "https://github.com/evq/stm32f103xx-usb", branch = "maple-mini-hack"}
usb-device = { git = "https://github.com/mvirkkunen/usb-device", rev = "e58e30f3b9c9bf4aab00ea039d129b964a3fd2d3" }
